Keep the qualifier map's order, and tidy the moved-method gap
TypeQualifierAllocator.imports() is keyed in the order the qualifiers
appear in the signature and callers emit imports from it, but Map.copyOf
returns an unspecified iteration order. Same fix already applied to
ModulePrefixContext.pendingImports.

Also drops the double blank line Utils.java was left with where the
prefix-resolution methods moved out to model-generator-commons.